--- a/ClientDataWiz/Views/MainWindow.xaml
+++ b/ClientDataWiz/Views/MainWindow.xaml
@@ -1,18 +1,41 @@
-﻿<Window x:Class="ClientDataWiz.MainWindow"
+﻿<Window x:Class="ClientDataWiz.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ClientDataWiz"
+        xmlns:views="clr-namespace:ClientDataWiz.Views"
+        xmlns:viewModels="clr-namespace:ClientDataWiz.ViewModels"
         mc:Ignorable="d"
-        Title="PGS Soft Internship" 
-        MinWidth="500" MinHeight="300" Width="600" Height="400" MaxWidth="1000" MaxHeight="800">
+        Title="PGS Software Internship" 
+        MinWidth="500" MinHeight="300" Width="600" Height="400" MaxWidth="1000" MaxHeight="800" 
+        ResizeMode="CanResize">
+
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModels:FirstPageViewModel}">
+            <views:FirstPageView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:FirstNameViewModel}">
+            <views:FirstNameView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:LastNameViewModel}">
+            <views:LastNameView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:AddressViewModel}">
+            <views:AddressView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:PhoneViewModel}">
+            <views:PhoneView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:LastPageViewModel}">
+            <views:LastPageView />
+        </DataTemplate>
+    </Window.Resources>
 
     <DockPanel>
-
         <StackPanel DockPanel.Dock="Top">
-            <Label Content="Welcome!" />
-            <TextBlock>This app will collect basic contact information about you. Not shady at all.</TextBlock>
+            <Label Style="{StaticResource WindowTitle}" Content="Welcome!" />
+            <TextBlock Style="{StaticResource WindowDescription}">This app will collect basic contact information about you. <Italic>Not shady at all.</Italic><LineBreak/>
+                <Bold>All fields are required!</Bold></TextBlock>
             <Separator />
         </StackPanel>
 
@@ -29,13 +52,13 @@
             </Grid.ColumnDefinitions>
 
             <Separator Grid.ColumnSpan="4" />
-            <Button IsEnabled="true" Content="Cancel" Grid.Row="1" Grid.Column="0"/>
-            <Button IsEnabled="true" Content="Previous" Grid.Row="1" Grid.Column="2"/>
-            <Button IsEnabled="true" IsDefault="true" Content="Next" Grid.Row="1" Grid.Column="3" />
+            <Button IsEnabled="{Binding IsCancelEnabled}" Command="{Binding Path=Cancel}" Content="Cancel" FontWeight="DemiBold" Grid.Row="1" Grid.Column="0"/>
+            <Button IsEnabled="{Binding IsPrevEnabled}" Command="{Binding Path=Prev}" Content="Prev" Grid.Row="1" Grid.Column="2"/>
+            <Button IsEnabled="{Binding IsNextEnabled}" Command="{Binding Path=Next}" IsDefault="true" Content="{Binding NextBtn}" Grid.Row="1" Grid.Column="3" />
         </Grid>
 
-        <StackPanel >
-            <!--viewModel here-->
+        <StackPanel Style="{StaticResource Pages}">
+            <ContentControl Content="{Binding Path=CurrViewModel}" />
         </StackPanel>
     </DockPanel>
 </Window>
