--- a/ClientDataWiz/Views/FirstNameView.xaml
+++ b/ClientDataWiz/Views/FirstNameView.xaml
@@ -1,14 +1,15 @@
 ﻿<UserControl x:Class="ClientDataWiz.Views.FirstNameView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <StackPanel Loaded="ControlLoaded">
-        <TextBlock  Style="{StaticResource Description}">
+        <TextBlock Style="{StaticResource Description}">
             Enter your first name.
         </TextBlock>
-        <Label Style="{StaticResource InputLabel}" Content="First Name:"/>
-        <TextBox Style="{StaticResource Input}" x:Name="FirstName" Text="{Binding UserData, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBlock Style="{StaticResource ErrorTextBlock}" Text="{ Binding ErrorDesc }" Visibility="{ Binding ShowError }"/>
+        <Label Style="{StaticResource InputLabel}" Content="First Name:" />
+        <TextBox Style="{StaticResource Input}" x:Name="FirstName"
+                 Text="{Binding UserData, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Style="{StaticResource ErrorTextBlock}" Text="{ Binding ErrorDesc }"
+                   Visibility="{ Binding ShowError }" />
     </StackPanel>
 </UserControl>
